Implement per-user request dismissal API
